--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<title>OASIS 2018 | REGISTRATION</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" /> 
 	
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
- 	<script type="text/javascript" src="main.js"></script>
-	
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" /> 
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+ 	<script type="text/javascript" src="registration.js"></script>
+	 <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />  -->
  
-	
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" /> 
+
 </head>
 <body>
 
@@ -23,6 +22,9 @@
 		</nav>
 		<h1 id="reg" style=" font-family: 'BebasNeue-Regular'; color: rgba(255, 255, 255, 1);  letter-spacing: 10px; font-weight: normal; font-size: 300%; padding-bottom: 2%;">REGISTER</h1>
 		<p></p>
+
+
+
     <form class="form"  id="register-form" acion="/2017/register/" method = "POST" style="opacity: 1; color: rgba(255, 255, 255, 1)">
 			
   		<div class="field">
@@ -112,6 +114,7 @@
       <div class="field">
 				<label>9. What event(s) do you want to register for?</label>
 				<p id="select_info"></p>
+				<p class="mob" style="display: none;" id="select_info_mobile"></p>
         <div style="display:flex;width:auto">
         <select style="color: white;" id="event-select" name="states[]"  multiple  tabindex="15">
 											
