error div added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </head>
 <body>
 
+	<div style="display: none;" class="error" id = "prereg-msg-overlay">
+		<div id = "prereg-msg-container">
+			<div id = "prereg-msg"><p>Invalid Email Address</p></div>
+			<img id = "close-prereg-msg" src = "cancel.svg" alt = "close-icon" />
+		</div>
+	</div>
+	
 <div class="wrapper">
     <nav class="menu_options">
     	
